# case_fullstack

./: .dockerignore  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/src/: config.py  main.py
backend/src/agent/: agent.py  context.py  datasets.py
backend/src/agent/tools/: query_data.py  visualize.py
backend/src/api/: deps.py
backend/src/api/routes/: chat.py  datasets.py
backend/src/schemas/: events.py
backend/src/services/: agent_runner.py  sessions.py  thinking_parser.py
backend/tests/: test_agent_runner.py  test_events.py  test_thinking_parser.py  test_tools.py
frontend/: .dockerignore  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: dataset-preview.spec.ts  happy-path.spec.ts  stop-stream.spec.ts
frontend/src/: App.tsx
frontend/src/components/chat/: ChatInput.tsx  ChatView.tsx  EmptyState.tsx  MessageItem.tsx  MessageList.tsx
frontend/src/components/datasets/: DatasetItem.tsx  DatasetPreviewPopover.tsx  DatasetSidebar.tsx
frontend/src/components/stream/: PlotlyRenderer.tsx  TableRenderer.tsx  TextStream.tsx  ThinkingBlock.tsx  ToolCallCard.tsx  TypingDots.tsx  plotly-factory.tsx
frontend/src/hooks/: useChatStream.ts  useDatasets.ts
frontend/src/lib/: sse.ts
frontend/src/state/: chat-reducer.ts
frontend/src/types/: datasets.ts  events.ts
